[gd_scene load_steps=5 format=3 uid="uid://cy6p1opvnv6yd"]

[ext_resource type="Script" path="res://scenes/ui/ui.gd" id="1_spgue"]
[ext_resource type="PackedScene" uid="uid://dwmu73g21k1q6" path="res://scenes/ui/build_button_section.tscn" id="2_051gl"]
[ext_resource type="Texture2D" uid="uid://chlkqk6k1af7a" path="res://assets/ui/w_idle.png" id="2_wqvsl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w6yyq"]
atlas = ExtResource("2_wqvsl")
region = Rect2(39, 62, 49, 38)

[node name="Ui" type="CanvasLayer"]
script = ExtResource("1_spgue")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_w6yyq")

[node name="ResourceLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "4"

[node name="VilliageBuildButtonSection" parent="MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("2_051gl")]
unique_name_in_owner = true
layout_mode = 2
building_name = "Villiage"
resource_cost = 4
description = "Gatter resource"

[node name="TowerBuildButtonSection" parent="MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("2_051gl")]
unique_name_in_owner = true
layout_mode = 2
building_name = "Tower"
resource_cost = 2
description = "Increase building range"

[node name="BarrackBuildButtonSection" parent="MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("2_051gl")]
unique_name_in_owner = true
layout_mode = 2
building_name = "Barrack"
resource_cost = 5
description = "Kiil goblin camp"
